syntax = "proto3";

option java_multiple_files = true;
option java_package = "bio.overture.proto.car_service";
option java_outer_classname = "CarServiceProto";
option objc_class_prefix = "CSP";

package template_car_service;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service CarService {

    rpc CreateCar (CreateCarRequest) returns (CreateCarResponse);
    rpc GetCar (GetCarRequest) returns (GetCarResponse);

}

message CreateCarRequest {
    CarData car = 1;
}

message CreateCarResponse {
    google.protobuf.StringValue id = 1;
    CarData car = 2;
}

message GetCarRequest {
    google.protobuf.StringValue id = 1;
}

message GetCarResponse {
    google.protobuf.StringValue id = 1;
    CarData car = 2;
}

message CarData {
    google.protobuf.StringValue brand = 1;
    google.protobuf.StringValue model = 2;
    DriveTypeValue type = 3;
    google.protobuf.Timestamp creationDate = 4;
    google.protobuf.Int32Value horsepower = 5;
    google.protobuf.BoolValue electric = 6;
}


message Date {
    google.protobuf.Int32Value year = 1;
    google.protobuf.Int32Value month = 2;
    google.protobuf.Int32Value day = 3;
}

enum DriveType {
    FRONT_WHEEL = 0;
    BACK_WHEEL = 1;
    ALL_WHEEL = 2;
}

message DriveTypeValue {
    DriveType value = 1;
}
